add /user/me endoiunt i ubral password_hash iz zaprosa
